@@ -1,3 +1,6 @@
+# Unreleased
+- [add][minor] Add a specific `Format` trait for generated interaces to avoid writing overly long trait bounds.
+
 # Version 0.5.0-alpha6 - 2021-11-30
 - [fix][minor] Make sure that decode errors are `Send` in all cases.
 
